优化补充jvm相关内容